feat: can query db by country, date, service

--- a/Task_6/templates/query.html
+++ b/Task_6/templates/query.html
@@ -5,6 +5,7 @@
     <a href="/allcases">View all cases</a>
     <hr />
     <h3>Filter cases by features</h3>
+    <h5>Fill out as many criteria as needed</h5>
     {{ wtf.quick_form(form) }}
     <hr />
   </div>
