--- a/Task_6/templates/result.html
+++ b/Task_6/templates/result.html
@@ -20,6 +20,10 @@
   <h4>Risk Score</h4>
   {{risk_score}}
   <hr />
+  <!-- show main abuse types of case -->
+  <h4>Abuse Types</h4>
+  {{abuse_types}}
+  <hr />
   <!-- show top 3 similar cases from database -->
   <h4>Similar Cases</h4>
   {{similar_cases}}
