cleanup result page

--- a/Task_6/templates/result.html
+++ b/Task_6/templates/result.html
@@ -4,9 +4,8 @@
   <h3>View Result</h3>
   <hr />
   <!-- show input case -->
-  <h4>Input Case</h4>
-  <p>Case Number: {{input.case_number}}</p>
-  <p>Case Text: {{input.case_text}}</p>
+  <h4>Case Text</h4>
+  <p>{{input.case_text}}</p>
   <hr />
   <!-- show summary of case -->
   <h4>Case Summary</h4>
