--- a/Task_6/templates/case.html
+++ b/Task_6/templates/case.html
@@ -15,15 +15,10 @@ block title %}Case Information{% endblock %} {% block content %}
   <h3>{{ _('Enter case information') }}</h3>
   <hr />
   <form action= "{{ url_for('enter_case') }}" method='POST'>
-  {{ _(form.case_text.label) }}<br>
-  {{ form.case_text(cols='50', rows='4', id='larger') }}<br>
-  {{ _(form.case_text.description) }}<br><br>
-  {{ _(form.case_upload.label) }}<br>
-  {{ form.case_upload() }}
-  {{ _(form.case_upload.description) }}<br><br>
-  {{ _(form.submit.label) }}<br>
-  {{ form.submit() }}<br>
-
+    {{ form.csrf_token }}
+    {{ wtf.form_field(form.case_text) }}
+    {{ wtf.form_field(form.case_upload) }}
+    {{ wtf.form_field(form.submit) }}
 
   {% for error in form.case_upload.errors%}
   <div class='alert alert-danger' role='alert'>{{_(error)}}</div>
