--- a/Task_6/templates/case.html
+++ b/Task_6/templates/case.html
@@ -2,13 +2,17 @@
 block title %}Case Information{% endblock %} {% block content %}
 <div class="container">
   <div class='lang_container'>
-    <a class='dropdown-item' href='/models/language/en'>English</a>
-    <a class='dropdown-item' href='/models/language/fr'>French</a>
+    <select class="form-control" onchange="javascript:location.href = this.value;">
+      <option>Language</option>
+      <option value='/models/language/en'>English</option>
+      <option value='/models/language/fr'>French</option>
+      <option value='/models/language/ko'>Korean</option>
+    </select>
   </div>
   <style>
     .lang_container{
       position: absolute;
-      top: 0px;
+      margin-top: 10px;
       right: 100px;
     }
   </style>
