--- a/Task_6/templates/result.html
+++ b/Task_6/templates/result.html
@@ -5,7 +5,7 @@
   <hr />
   <!-- show input case -->
   <h4>{{ _('Case Text') }}</h4>
-  <p>{{input.case_text}}</p>
+  <p>{{ input }}</p>
   <hr />
   <!-- show summary of case -->
   <h4>{{ _('Case Summary') }}</h4>
