feat: add chinese, german, indonesian translations

--- a/Task_6/templates/case.html
+++ b/Task_6/templates/case.html
@@ -6,7 +6,10 @@ block title %}Case Information{% endblock %} {% block content %}
       <option>Language</option>
       <option value='/models/language/en'>English</option>
       <option value='/models/language/fr'>French</option>
+      <option value='/models/language/de'>German</option>
+      <option value='/models/language/zh'>Chinese</option>
       <option value='/models/language/ko'>Korean</option>
+      <option value='/models/language/id'>Indonesian</option>
     </select>
   </div>
   <style>
