--- a/Task_6/templates/query.html
+++ b/Task_6/templates/query.html
@@ -6,7 +6,10 @@
         <option>Language</option>
         <option value='/query/language/en'>English</option>
         <option value='/query/language/fr'>French</option>
+        <option value='/query/language/de'>German</option>
+        <option value='/query/language/zh'>Chinese</option>
         <option value='/query/language/ko'>Korean</option>
+        <option value='/query/language/id'>Indonesian</option>
       </select>
     </div>
     <style>
