--- a/Task_6/templates/case.html
+++ b/Task_6/templates/case.html
@@ -1,22 +1,27 @@
 {% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %} {%
 block title %}Case Information{% endblock %} {% block content %}
 <div class="container">
-  <div class='lang_container'>
-    <select class="form-control" onchange="javascript:location.href = this.value;">
-      <option>Language</option>
-      <option value='/models/language/en'>English</option>
-      <option value='/models/language/fr'>French</option>
-      <option value='/models/language/de'>German</option>
-      <option value='/models/language/zh'>Chinese</option>
-      <option value='/models/language/ko'>Korean</option>
-      <option value='/models/language/id'>Indonesian</option>
-    </select>
+  <div class='flex-box'>
+    <div class='lang_container'>
+      <select class="form-control" onchange="javascript:location.href = this.value;">
+        <option>Language</option>
+        <option value='/models/language/en'>English</option>
+        <option value='/models/language/fr'>French</option>
+        <option value='/models/language/de'>German</option>
+        <option value='/models/language/zh'>Chinese</option>
+        <option value='/models/language/ko'>Korean</option>
+        <option value='/models/language/id'>Indonesian</option>
+      </select>
+    </div>
   </div>
   <style>
-    .lang_container{
-      position: absolute;
+    .flex-box {
+      display: flex;
+      justify-content: flex-end;
+    }
+    .lang_container {
       margin-top: 10px;
-      right: 100px;
+      width: 150px;
     }
   </style>
   <h3>{{ _('Enter case information') }}</h3>
