chore: show similar cases in a table

--- a/Task_6/templates/case.html
+++ b/Task_6/templates/case.html
@@ -24,9 +24,10 @@ block title %}Case Information{% endblock %} {% block content %}
       width: 150px;
     }
   </style>
+  <h1 class="page-header">Run Models</h1>
   <h3>{{ _('Enter case information') }}</h3>
   <h5>{{ _('Please enter only one field between Case Text and File. If you fill in both fields, only File will be read.') }}</h5>
-  <hr />
+  <!-- <hr /> -->
   <form action= "{{ url_for('enter_case') }}" method='POST' enctype="multipart/form-data">
     {{ form.csrf_token }}
     {{ wtf.form_field(form.case_text) }}
