--- a/Task_6/templates/main.html
+++ b/Task_6/templates/main.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap/base.html" %} {% block title %}Welcome to Omdena ISS{% endblock
-%} 
+%}
 {% block content %}
 <div class="container">
 <div class="col-md-8 offset-md-2">
@@ -9,19 +9,9 @@
     </h1>
     <div class="card-body">
         <h3 class="card-title"> Please choose an option: </h3>
-            <a class="btn btn-primary" href='/models'>run models on new case</a>
-            <a class="btn btn-primary" href='/query'>query database</a>
+            <a class="btn btn-primary" href='/models'>Run models on new case</a>
+            <a class="btn btn-primary" href='/query'>Query database</a>
     </div>
     </div>
 </div>
 </div>
-
-<!--<h1>Welcome to Omdena ISS</h1>
-<div class='container'>
-    <h2>Please choose an option: <br>
-       
-           <a class="btn btn-primary" href='/models'>run models on new case</a>
-           <a class="btn btn-primary" href='/query'>query database</a>
-    </h2>
-</div>
-{% endblock %}-->
