--- a/Task_6/templates/main.html
+++ b/Task_6/templates/main.html
@@ -2,16 +2,39 @@
 %}
 {% block content %}
 <div class="container">
-<div class="col-md-8 offset-md-2">
-    <div class="card">
-    <h1 class="card-header">
-        Welcome to Omdena ISS
-    </h1>
-    <div class="card-body">
-        <h3 class="card-title"> Please choose an option: </h3>
-            <a class="btn btn-primary" href='/models'>Run models on new case</a>
-            <a class="btn btn-primary" href='/query'>Query database</a>
+    <div class="flex-box">
+        <div class="lang_container">
+            <div id="google_translate_element"></div>
+        </div>
     </div>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script>
+    <style>
+    .flex-box {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .lang_container {
+        margin-top: 10px;
+    }
+    </style>
+
+    <div class="col-md-8 offset-md-2">
+        <div class="card">
+            <h1 class="card-header">
+                Welcome to Omdena ISS
+            </h1>
+            <div class="card-body">
+                <h3 class="card-title"> Please choose an option: </h3>
+                <a class="btn btn-primary" href='/models'>Run models on new case</a>
+                <a class="btn btn-primary" href='/query'>Query database</a>
+            </div>
+        </div>
     </div>
 </div>
-</div>
+{% endblock %}
+
