--- a/Task_6/templates/query.html
+++ b/Task_6/templates/query.html
@@ -1,19 +1,17 @@
 {% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %} {%
   block title %}Search Database{% endblock %} {% block content %}
   <div class="container">
-    <div class='flex-box'>
-      <div class='lang_container'>
-        <select class="form-control" onchange="javascript:location.href = this.value;">
-          <option>Language</option>
-          <option value='/query/language/en'>English</option>
-          <option value='/query/language/fr'>French</option>
-          <option value='/query/language/de'>German</option>
-          <option value='/query/language/zh'>Chinese</option>
-          <option value='/query/language/ko'>Korean</option>
-          <option value='/query/language/id'>Indonesian</option>
-        </select>
+    <div class="flex-box">
+      <div class="lang_container">
+        <div id="google_translate_element"></div>
       </div>
     </div>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      }
+    </script>
     <style>
       .flex-box {
         display: flex;
@@ -21,14 +19,18 @@
       }
       .lang_container {
         margin-top: 10px;
-        width: 150px;
       }
     </style>
+
+    <h1 class="page-header">Query Database</h1>
+
     <h3>{{ _('View all cases') }}</h3>
     <a href="/allcases">{{ _('View all cases') }}</a>
     <hr />
+
     <h3>{{ _('Filter cases by features') }}</h3>
     <h5>{{ _('Fill out as many criteria as needed') }}</h5>
+
     <form action="{{ url_for('query_db') }}" method='POST'>
       {{ form.csrf_token }}
       {{ wtf.form_field(form.get_open_close) }}
@@ -41,6 +43,5 @@
       {{ wtf.form_field(form.get_high_risk) }}
       {{ wtf.form_field(form.submit) }}
     </form>
-    <hr />
   </div>
   {% endblock %}
