--- a/Task_6/templates/query_result.html
+++ b/Task_6/templates/query_result.html
@@ -1,6 +1,27 @@
 {% extends "bootstrap/base.html" %} {% block title %}Case Information{% endblock
 %} {% block content %}
 <div class="container">
+  <div class="flex-box">
+    <div class="lang_container">
+      <div id="google_translate_element"></div>
+    </div>
+  </div>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+  </script>
+  <style>
+    .flex-box {
+      display: flex;
+      justify-content: flex-end;
+    }
+    .lang_container {
+      margin-top: 10px;
+    }
+  </style>
+
   <h1 class="page-header">{{ _('View Result') }}</h1>
 
   <ul class="nav nav-tabs">
@@ -11,7 +32,7 @@
     <li><a data-toggle="tab" href="#abuses">{{ _('Abuse Types') }}</a></li>
     <li><a data-toggle="tab" href="#risk">{{ _('Risk Score') }}</a></li>
     <li><a data-toggle="tab" href="#similar">{{ _('Similar Cases') }}</a></li>
-    <li><a data-toggle="tab" href="#translation">{{ _('Translation') }}</a></li>
+    <!-- <li><a data-toggle="tab" href="#translation">{{ _('Translation') }}</a></li> -->
   </ul>
 
   <div class="tab-content">
@@ -85,9 +106,9 @@
     </div>
 
     <!-- show translation -->
-    <div id="translation" class="tab-pane fade">
+    <!-- <div id="translation" class="tab-pane fade">
       <h3>{{ _('Translation in your select language') }}</h3>
-    </div>
+    </div> -->
 
   </div>
 </div>
