--- a/Task_6/templates/case.html
+++ b/Task_6/templates/case.html
@@ -1,12 +1,39 @@
 {% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %} {%
 block title %}Case Information{% endblock %} {% block content %}
 <div class="container">
-  <h3>Enter case information</h3>
+  <div class='lang_container'>
+    <select class="form-control" onchange="javascript:location.href = this.value;">
+      <option>Language</option>
+      <option value='/models/language/en'>English</option>
+      <option value='/models/language/fr'>French</option>
+      <option value='/models/language/de'>German</option>
+      <option value='/models/language/zh'>Chinese</option>
+      <option value='/models/language/ko'>Korean</option>
+      <option value='/models/language/id'>Indonesian</option>
+    </select>
+  </div>
+  <style>
+    .lang_container{
+      position: absolute;
+      margin-top: 10px;
+      right: 100px;
+    }
+  </style>
+  <h3>{{ _('Enter case information') }}</h3>
+  <h5>{{ _('Please enter only one field between Case Text and File. If you fill in both fields, only File will be read.') }}</h5>
   <hr />
-  {{ wtf.quick_form(form) }}
-  {% for error in form.case_upload.errors%}
-  <div class='alert alert-danger' role='alert'>{{error}}</div>
-  {% endfor %}
+  <form action= "{{ url_for('enter_case') }}" method='POST' enctype="multipart/form-data">
+    {{ form.csrf_token }}
+    {{ wtf.form_field(form.case_text) }}
+    {{ wtf.form_field(form.case_upload) }}
+    {{ wtf.form_field(form.from_language) }}
+    {{ wtf.form_field(form.to_language) }}
+    {{ wtf.form_field(form.submit) }}
+
+    {% for error in form.case_upload.errors%}
+    <div class='alert alert-danger' role='alert'>{{_(error)}}</div>
+    {% endfor %}
+  </form>
   <hr />
 </div>
 {% endblock %}
