--- a/Task_6/templates/cases.html
+++ b/Task_6/templates/cases.html
@@ -5,11 +5,12 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <div class="row">
-        <div class="col-md-12">
-            <div class="chart" id="graph">
+        <div class="col-lg-12">
+            <div id="world">
                 <script>
-                    var graphs = {{plot | safe}};
-                    Plotly.plot('graph',graphs,{});
+                    var world = {{plot | safe}};
+                    Plotly.plot('world',world,{});
+                    //Plotly.newPlot("world", data, layout, {showLink: false});
                 </script>
             </div>
         </div>
@@ -24,15 +25,21 @@
             </div>
         </div>
     </div>
-   
 
     <div class="row">
-        <div class="col-lg-12">
-            <div id="world">
+        <div class="col-lg-6">
+            <div  id="fig">
                 <script>
-                    var world = {{plot2 | safe}};
-                    Plotly.plot('world',world,{});
-                    //Plotly.newPlot("world", data, layout, {showLink: false});
+                    var figs = {{plot2 | safe}};
+                    Plotly.plot('fig',figs,{});
+                </script>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="chart" id="graph">
+                <script>
+                    var graphs = {{plot3 | safe}};
+                    Plotly.plot('graph',graphs,{});
                 </script>
             </div>
         </div>
