--- a/Task_6/templates/query.html
+++ b/Task_6/templates/query.html
@@ -1,12 +1,41 @@
 {% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %} {%
   block title %}Search Database{% endblock %} {% block content %}
   <div class="container">
-    <h3>View all cases</h3>
-    <a href="/allcases">View all cases</a>
+    <div class='lang_container'>
+      <select class="form-control" onchange="javascript:location.href = this.value;">
+        <option>Language</option>
+        <option value='/query/language/en'>English</option>
+        <option value='/query/language/fr'>French</option>
+        <option value='/query/language/de'>German</option>
+        <option value='/query/language/zh'>Chinese</option>
+        <option value='/query/language/ko'>Korean</option>
+        <option value='/query/language/id'>Indonesian</option>
+      </select>
+    </div>
+    <style>
+      .lang_container{
+        position: absolute;
+        margin-top: 10px;
+        right: 100px;
+      }
+    </style>
+    <h3>{{ _('View all cases') }}</h3>
+    <a href="/allcases">{{ _('View all cases') }}</a>
     <hr />
-    <h3>Filter cases by features</h3>
-    <h5>Fill out as many criteria as needed</h5>
-    {{ wtf.quick_form(form) }}
+    <h3>{{ _('Filter cases by features') }}</h3>
+    <h5>{{ _('Fill out as many criteria as needed') }}</h5>
+    <form action="{{ url_for('query_db') }}" method='POST'>
+      {{ form.csrf_token }}
+      {{ wtf.form_field(form.get_open_close) }}
+      {{ wtf.form_field(form.case_number) }}
+      {{ wtf.form_field(form.open_date) }}
+      {{ wtf.form_field(form.close_date) }}
+      {{ wtf.form_field(form.country) }}
+      {{ wtf.form_field(form.service) }}
+      {{ wtf.form_field(form.keywords) }}
+      {{ wtf.form_field(form.get_high_risk) }}
+      {{ wtf.form_field(form.submit) }}
+    </form>
     <hr />
   </div>
   {% endblock %}
