--- a/Task_6/templates/models_result.html
+++ b/Task_6/templates/models_result.html
@@ -1,11 +1,12 @@
 {% extends "bootstrap/base.html" %} {% block title %}Case Information{% endblock
 %} {% block content %}
 <div class="container">
-
   <div class="flex-box">
-    <div class="lang_container">
-      <div id="google_translate_element"></div>
+    <div class="menu">
+      <a href="/models" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-left"></span> Try Another Case</a>
+      <a href="/" class="btn btn-primary"><span class="glyphicon glyphicon-home"></span> Home</a>
     </div>
+    <div id="google_translate_element"></div>
   </div>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script type="text/javascript">
@@ -16,9 +17,7 @@
   <style>
     .flex-box {
       display: flex;
-      justify-content: flex-end;
-    }
-    .lang_container {
+      justify-content: space-between;
       margin-top: 10px;
     }
   </style>
