--- a/Task_6/templates/query.html
+++ b/Task_6/templates/query.html
@@ -2,9 +2,10 @@
   block title %}Search Database{% endblock %} {% block content %}
   <div class="container">
     <div class="flex-box">
-      <div class="lang_container">
-        <div id="google_translate_element"></div>
+      <div class="menu">
+        <a href="/" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-left"></span> Home</a>
       </div>
+      <div id="google_translate_element"></div>
     </div>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script type="text/javascript">
@@ -15,9 +16,7 @@
     <style>
       .flex-box {
         display: flex;
-        justify-content: flex-end;
-      }
-      .lang_container {
+        justify-content: space-between;
         margin-top: 10px;
       }
     </style>
